# hotcorners

./: Cargo.toml  README.md
src/: hotkeys.rs  main.rs
