[package]
name = "hotcorners"
version = "0.2.1"
authors = ["Tim Roberts <tim@timroberts.dev>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A small hot corners implementation for Windows 10/11"
repository = "https://github.com/timrobertsdev/hotcorners"
keywords = ["windows", "hotcorners"]
categories = ["command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[profile.release]
lto = true

[build-dependencies]
static_vcruntime = "2.0"

[dependencies]
toml = "0.7"
once_cell = "1.17.0"
win_dbg_logger = "0.1.0"
log = "0.4.17"

[dependencies.serde]
version = "1.0"
features = [ "derive", ]

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
]
